feat(tenant): add method to delete tenant with all its associations (#43)
* Add not null constraint to tenant_id fields

* Add logic to destroy tenant with all its associations

* Update fixture

* Add tests for new logic

* Update candidate_controller_test

* Update rodauth logic

* Added assertion so that it will fail if additional model with tenant will appear

* Change method name

* Update tests

* Rename method

* Update test description

* Remove redundant db query

* Rename method

* Move sorting to different method

* Update test

--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -278,7 +278,7 @@ ivan_ivanov_candidate_added:
   actor_account: admin_account
   eventable: ivan_ivanov (Candidate)
   performed_at: <%= 2.days.ago %>
-  tenant: acme_tenant
+  tenant: toughbyte_tenant
 
 john_msg1_email_received:
   type: :email_sent
