--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@eslint/compat": "^1.1.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.6.0",
+    "@stylistic/eslint-plugin-js": "^2.11.0",
     "eslint": "^9.0.0",
     "eslint-plugin-import": "^2.17.3",
     "globals": "^15.8.0",
