--- a/test/fixtures/email_templates.yml
+++ b/test/fixtures/email_templates.yml
@@ -2,3 +2,8 @@ ruby_dev_intro:
   name: Ruby dev introduction
   subject: New opportunity
   tenant: toughbyte_tenant
+
+golang_dev_intro:
+  name: Golang dev introduction
+  subject: New opportunity
+  tenant: toughbyte_tenant
