feat: implementation of sources page on Admin Interface (#273)
Co-authored-by: wrmk <elmakan@gmail.com>

--- a/test/fixtures/candidate_sources.yml
+++ b/test/fixtures/candidate_sources.yml
@@ -5,3 +5,7 @@ linkedin:
 headhunter:
   name: HeadHunter
   tenant: toughbyte_tenant
+
+headhunter_acme:
+  name: HeadHunter Acme
+  tenant: acme_tenant
