--- a/test/fixtures/action_text/rich_texts.yml
+++ b/test/fixtures/action_text/rich_texts.yml
@@ -1,15 +1,24 @@
-ruby_dev_intro_email_template_body:
-  record: ruby_dev_intro (EmailTemplate)
-  name: body
+ruby_dev_intro_toughbyte_email_template_message:
+  record: ruby_dev_intro_toughbyte (EmailTemplate)
+  name: message
   body: |
     Hi, {{first_name}}!
     My name is {{sender_first_name}}. Found your profile on and was blown away at your CV.
     I'm looking for {{position}}, and you look like a perfect candidate.
     Tell me if you're interested, and I'll gladly answer all your questions.
 
-golang_dev_intro_email_template_body:
-  record: golang_dev_intro (EmailTemplate)
-  name: body
+golang_dev_intro_toughbyte_email_template_message:
+  record: golang_dev_intro_toughbyte (EmailTemplate)
+  name: message
+  body: |
+    Hi, {{first_name}}!
+    My name is {{sender_first_name}}. Found your profile on and was blown away at your CV.
+    I'm looking for {{position}}, and you look like a perfect candidate.
+    Tell me if you're interested, and I'll gladly answer all your questions.
+
+ruby_dev_intro_acme_email_template_message:
+  record: ruby_dev_intro_acme (EmailTemplate)
+  name: message
   body: |
     Hi, {{first_name}}!
     My name is {{sender_first_name}}. Found your profile on and was blown away at your CV.
